public/Content/full.css
@charset "UTF-8";

* {
    font-family: "Lato", "Roboto", "sans-serif";
}

/* Home/Index */
.header {
    width: 100%;
    height: 20vh;
}

body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100vh;
    background-image: linear-gradient(to right, rgb(255, 173, 173), rgb(187, 187, 255));
    background-size: cover;
}

.navBar {
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #333;
    font-size: 16px;
}

.navBar ul {
    list-style-type: none;
}

.navBar ul li {
    display: inline-block;
    text-align: center;
}

.navBar ul li a {
    text-decoration: none;
    color: white;
    padding: 10px;
}

.navBar ul li a:hover {
    background-color: white;
    color: black;
}

.home {
    width: 100%;
    position: absolute;
    top: 42%;
    text-align: center;
    color: white;
    font-size: 20px;
}

.logo {
    font-size: 16px;
    color: white;
    margin-left: 30px;
    margin-right: 40px;
}

.logo h1 {
    background-color: #333;
}

.footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    color: black;
    text-align: center;

}

.home_container {
    height: 100vh;
    width: 100%;
    background-image: linear-gradient(to bottom right, rgb(255, 173, 173), rgb(187, 187, 255));
    background-size: cover; /* stretch to cover */
}


/* About */
.about {
    display: flex;
    flex-direction: column; /* makes elements stack on top of each other */
    align-items: center; /* align items in center of cross-axis (horizontal) */
    text-align: center;
    padding: 20px;
    width: 960px;
    margin: auto;
  }

.about h1 {
    border-bottom: 3px solid #000; /* thickness, type, color */
    text-decoration: none; /* remove underline */
}
  
.wrapper {
    display: flex;
    flex-direction: row; /* makes the image and text side-by-side */
    justify-content: center; /* centers horizontally */
    align-items: center; /* aligns items in center of cross-axis (vertical) */
}

.about .aboutme_closeup {
    width: 20%; 
    height: 20%; 
    border-style: solid;
    border-color: white;
    border-width: 3px;
    border-radius: 10px;
    margin-right: 10px;
}

.about #video {
    margin-top: 50px;
}


/* Contact */
.contact {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;  
}

.contact h2 {
    border-bottom: 3px solid #000; /* thickness, type, color */
    text-decoration: none; /* remove underline */
}
.contact .contact_header {
    justify-content: left;
}
.clear {
    clear: both;
}


/* Projects */
.projects {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.projects h2 {
    border-bottom: 3px solid #000; /* thickness, type, color */
    text-decoration: none; /* remove underline */
}
.projects ol li a {
    text-decoration: none;
}
.entire_folder {
    list-style-type: none;
}

#video {
    width: 50%;
    height: 70%;
}


h6 {
    font-size: 14px;
}

